# commcare-connect

./: -  .cli_token  .dockerignore  .env_template  .eslintrc.js  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  Dockerfile.prod  IMPROVED_SSE_MIXIN.md  LABS-IMPLEMENTATION.md  QUICK_START_GUIDE.md  README.md  components.json  demo_decorator.py  docker-compose.yml  e2e_console_log.txt  e2e_kmc_console.txt  manage.py  new_architecture.md  package-lock.json  package.json  pr_guidelines.md  pyproject.toml  registry_password.sh  requirements-dev.txt  requirements.txt  screenshot_timeline.py  sentry-logger-test.json  setup.cfg  task-def-web.json  tasks.py  tatus  tsconfig.json
.agents/: deploy.yml
.claude/: AGENTS.md  launch.json
.cursor/plans/: labs-oauth-login-system-3e9c014c.plan.md
.ebextensions/: 00-install-packages.config  01-celery.config  db-migrate.config  django.config  logging.config  pre-deploy.config
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ai-review.yml  ci.yml  deploy-labs.yml  deploy.yml  kamal_deploy.yml  security.yml
.playwright-mcp/: audit-export-1466.json  audit-export-1467.json
commcare_connect/: cache.py  conftest.py
commcare_connect/actions/: ENHANCED_UI_PATTERNS.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS_SUMMARY.md  QUICK_START.md  README.md  SIMPLIFIED_VIEW_SUMMARY.md  STREAMLINED_SUMMARY.md  UI_OBSERVATIONS_AND_IDEAS.md  UPDATES_SUMMARY.md  apps.py  urls.py  views.py
commcare_connect/ai/: README.md  apps.py  session_store.py  tasks.py  types.py  urls.py  views.py
commcare_connect/audit/: Connect Superset Schema.csv  EXPERIMENT_IMPLEMENTATION_SUMMARY.md  README.md  admin.py  ai_review.py  analysis_config.py  apps.py  audit_dependencies.yaml  blob_api.py  calculations.py  chc_indicators.py  commcare_app_fallback.csv  data_access.py  debug_image_fields.py  experiment_models.py  experiment_views.py  helpers.py  hq_app_utils.py  indicators.py  models.py  oauth_views.py  plan.md  provider.py  provider_urls.py  run_audit_integration.py  run_experiment_audit_integration.py  services.py  tables.py  tasks.py  test_phase1.py  urls.py  views.py
commcare_connect/commcarehq/: admin.py  api.py  models.py  urls.py  views.py
commcare_connect/commcarehq_provider/: apps.py  provider.py  urls.py  views.py
commcare_connect/connect_id_client/: __init__.py  exceptions.py  main.py  models.py  tests.py
components/: AIChat.tsx  ChatUI.tsx  ChatWidget.tsx  HelloWorld.tsx
config/: api_router.py  celery_app.py  db_router.py  urls.py  views.py  wsgi.py
deploy/: .env.erb  README.md  ansible.cfg  deploy.yml  inventory.yml  play.yml  production.inventory.yml  rebuildstaging  registry_password.sh  staging.inventory.yml  test.yml  utils.yml  vault.yml  vault_password.sh
docker/: entrypoint  start  start_celery  start_migrate
docs/: LABS_ARCHITECTURE.md  Makefile  conf.py  dependency-management.md  howto.rst  index.rst  make.bat  users.rst
requirements/: base.in  base.txt  dev.in  dev.txt  labs.in  labs.txt  local.txt  production.in  production.txt
tailwind/: safelists.txt  tailwind.css
webpack/: base.config.js  common.config.js  prod.config.js
(+1574 files in other folders)
