[project]
name = "commcare-connect"
version = "0.0.1"
requires-python = "==3.11.*"
dependencies = [
    "argon2-cffi>=21.3.0",
    "celery>=5.3.4",
    "crispy-tailwind>=1.0.3",
    "django>=4.2.5",
    "django-allauth>=0.54.0",
    "django-autocomplete-light>=3.11.0",
    "django-celery-beat>=2.5.0",
    "django-cors-headers>=4.2.0",
    "django-crispy-forms>=2.0",
    "django-environ>=0.10.0",
    "django-filter>=24.3",
    "django-htmx>=1.19.0",
    "django-model-utils>=4.3.1",
    "django-oauth-toolkit>=2.3.0",
    "django-pghistory>=3.9.1",
    "django-redis>=5.3.0",
    "django-tables2>=2.6.0",
    "django-vectortiles>=1.0.2",
    "django-waffle>=5.0.0",
    "django-weasyprint>=2.4.0",
    "djangorestframework>=3.14.0",
    "drf-spectacular>=0.26.4",
    "flatten-dict>=0.4.2",
    "geopy>=2.4.1",
    "gevent>=24.11.1",
    "hiredis>=2.2.3",
    "httpx[http2]>=0.24.1",
    "jsonpath-ng>=1.5.3",
    "pillow>=10.0.0",
    "pyproj>=3.7.2",
    "python-slugify>=8.0.1",
    "quickcache>=0.5.4",
    "redis>=4.6.0",
    "sentry-sdk>=1.29.2",
    "shapely>=2.1.2",
    "tablib[xlsx]>=3.5.0",
    "twilio>=8.8.0",
    "urllib3<2.0.0",
    "whitenoise>=6.5.0",
]

# ==== pytest ====
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ds=config.settings.test --reuse-db"
python_files = [
    "tests.py",
    "test_*.py",
]

# ==== Coverage ====
[tool.coverage.run]
include = ["commcare_connect/**"]
omit = ["*/migrations/*", "*/tests/*"]
plugins = ["django_coverage_plugin"]


# ==== black ====
[tool.black]
line-length = 119
target-version = ['py311']


# ==== isort ====
[tool.isort]
profile = "black"
line_length = 119
known_first_party = [
    "commcare_connect",
    "config",
]
skip = ["venv/"]
skip_glob = ["**/migrations/*.py"]


# ==== PyLint ====
[tool.pylint.MASTER]
load-plugins = [
    "pylint_django",
    "pylint_celery",
]
django-settings-module = "config.settings.local"

[tool.pylint.FORMAT]
max-line-length = 119

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-docstring",
    "invalid-name",
]

[tool.pylint.DESIGN]
max-parents = 13

[tool.pylint.TYPECHECK]
generated-members = [
    "REQUEST",
    "acl_users",
    "aq_parent",
    "[a-zA-Z]+_set{1,2}",
    "save",
    "delete",
]

[tool.uv.sources]
xml2json = { git = "https://github.com/dimagi/xml2json", rev = "041b1ef" }
git-build-branch = { git = "https://github.com/dimagi/git-build-branch" }

[dependency-groups]
dev = [
    "black>=23.7.0",
    "coverage>=7.2.7",
    "django-debug-toolbar>=4.1.0",
    "factory-boy>=3.3.0",
    "flake8>=6.1.0",
    "flake8-isort>=6.0.0",
    "git-build-branch",
    "invoke>=2.2.0",
    "ipdb>=0.13.13",
    "pre-commit>=3.3.3",
    "psycopg2-binary>=2.9.6",
    "pylint-celery>=0.3",
    "pylint-django>=2.5.3",
    "pytest>=7.4.0",
    "pytest-django>=4.5.2",
    "pytest-httpx>=0.24.0",
    "watchfiles>=0.19.0",
    "werkzeug[watchdog]>=2.3.7",
    "xml2json",
]
production = [
    "django-allow-cidr>=0.7.1",
    "django-anymail[amazon-ses]>=10.1",
    "django-storages[boto3]>=1.13.2",
    "gunicorn[gevent]>=21.2.0",
    "psycopg2>=2.9.6",
]
